# Freezer-rs

./: Cargo.toml  Cargo.toml.bak  build.rs  build.rs.bak  gradle.properties  settings.gradle.kts
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  clean.yml
app/: build.gradle.kts  ruu.jks
app/src/main/: AndroidManifest.xml  AndroidManifest.xml.bak
app/src/main/assets/: xposed_init
app/src/main/java/com/ruu/freeze/: AppInfo.java  AppList.java  AppListAdapter.java  Data.java  LogCat.java  MainActivity.java  Settings.java  Utils.java  Utils.java.bak
app/src/main/java/com/ruu/freeze/base/: AbstractMethodHook.java  AbstractMethodHook.java.bak  AbstractReplaceHook.java  AbstractReplaceHook.java.bak  MethodHook.java  MethodHook.java.bak
app/src/main/java/com/ruu/freeze/hook/: Config.java  Config.java.bak  Enum.java  Enum.java.bak  Hook.java  Hook.java.bak  XpUtils.java  XpUtils.java.bak
app/src/main/java/com/ruu/freeze/hook/Binder/: MilletBinderHook.java  SystemChecker.java  (+2 more)
app/src/main/res/layout/: activity_main.xml  item_app.xml  layout_app_list.xml  layout_log_cat.xml  layout_settings.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
src/: freezer.rs.bak  logger.rs  logger.rs.bak  main.rs  main.rs.bak  socket.rs
src/freeze/: app.rs  config.rs  mod.rs
src/freeze/freezer/: mod.rs
src/freezer/: app.rs  app.rs.bak  config.rs  enum.rs  mod.rs  mod.rs.bak
src/freezer/cgroup/: mod.rs  v1.rs  v2.rs
src/freezer/config/: mod.rs
src/socket/: mod.rs  xposed.rs
task/: Cargo.toml
task/src/: main.rs
(+19 files in other folders)
