[package]
name = "freezer-rs"
version = "0.1.0"
edition = "2024"
description = "墓碑"
authors = ["生于生时，亡于亡刻"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
flexi_logger = "0.29.8"
lazy_static = "1.5.0"
libc = "0.2.169"
log = "0.4.25"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"

[build-dependencies]
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
anyhow = "1.0.95"
